# RL_ENV

./: Dockerfile  PROJECT_GUIDE.md  README.md  app.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt
agent/: __init__.py  baseline_agent.py
env/: __init__.py  action_validation.py  actions.py  environment.py  observations.py  reward.py  table_ops.py  tasks.py
grader/: __init__.py  grader.py
scripts/: eval_baseline.py  llm_env.py  run_baseline.py
server/: __init__.py  app.py
